# explorer_qml

./: CMakeLists.txt  CustomButton.qml  DirectoryListView.qml  MainMenu.qml  README.md  Theme.js  directorymodel.cpp  directorymodel.h  filemanager.cpp  filemanager.h  image.qrc  main.cpp  main.qml  qml.qrc
